fixing storefront margins for alignment of logo

--- a/meinberlin/assets/scss/components/_storefront.scss
+++ b/meinberlin/assets/scss/components/_storefront.scss
@@ -23,8 +23,6 @@
 .storefront__col {
     display: flex;
     flex-direction: column;
-    margin-left: $r-spacer;
-    margin-right: $r-spacer;
 
     @media screen and (min-width: $breakpoint-md) {
         width: 33.3%;
@@ -33,6 +31,27 @@
     @media screen and (min-width: $breakpoint-xs) {
         width: 50%;
         min-height: 632px;
+    }
+}
+
+.storefront__first-col {
+    margin-right: $r-spacer;
+
+    @media screen and (min-width: $breakpoint-xs) {
+        margin-left: $r-spacer;
+    }
+}
+
+.storefront__mid-col {
+    margin-left: $r-spacer;
+    margin-right: $r-spacer;
+}
+
+.storefront__last-col {
+    margin-left: $r-spacer;
+
+    @media screen and (max-width: $breakpoint-xs) {
+        margin: auto;
     }
 }
 
